--- a/README.org
+++ b/README.org
@@ -77,36 +77,9 @@ You can also fetch public JWKs from an OpenID Provider. For example:
    #<CL-JWK.CORE:JWK {10021B60D3}>)
 #+end_src
 
-Token verification can be done using [[https://github.com/fukamachi/jose][fukamachi/jose]] by providing the
-decoded JWK key and respective algorithm.
-
-The following helper function can be used to decode JWT tokens using
-the =cl-jwk= and =jose= systems.
-
-#+begin_src lisp
-  (defun decode-jwt (jwk token &optional algorithm)
-    "Decodes a token using JWK and JOSE systems"
-    (multiple-value-bind (claims headers signature)
-        (jose:inspect-token token)
-      (declare (ignore claims signature))
-      ;; Get algorithm from the token, unless specified explicitely
-      (let* ((alg-from-header (cdr (assoc "alg" headers :test #'string=)))
-             (algorithm (or algorithm alg-from-header))
-             (key (cl-jwk:jwk-key jwk)))
-        (jose:decode (cl-jwk:keywordize algorithm) key token))))
-#+end_src
-
-We can now use =DECODE-JWT= to decode a JWT token.
-
-#+begin_src lisp
-  CL-USER> (defparameter *jwk-key* (cl-jwk:decode :json *my-jwk-json-data*))
-  *JWK-KEY*
-
-  CL-USER> (defparameter *access-token* "eyJxxx.eyJzdWIiOiIxMjxxx.SflKxwRJSMeKKFxxx ...")
-  *ACCESS-TOKEN*
-
-  CL-USER> (decode-jwt *jwk-key* *access-token*)
-#+end_src
+Token verification can be done using the =CL-JWK:VERIFY-TOKEN= generic
+function. =CL-JWK:VERIFY-TOKEN= is implemented for both =CL-JWK:JWK=
+and =CL-JWK:CLIENT= classes.
 
 * Tests
 
